--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ capybara-*.html
 # Heroku needs these for precompiling assets
 # If you plan to deploy on Heroku, add the
 # final gulp artifacts to git
-/public/assets/*
+#/public/assets/*
 
 config/initializers/secret_token.rb
 config/secrets.yml
